// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="UUID_MOCK_KEY_0"
  data-tip="TOOLTIP"
>
  <form
    className=""
  >
    <RoundButton
      active={true}
      back={false}
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      inverse={false}
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="UUID_MOCK_KEY_0"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;

exports[`square is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="UUID_MOCK_KEY_1"
  data-tip="TOOLTIP"
>
  <form
    className=""
  >
    <SquareButton
      active={true}
      back={false}
      border={true}
      classNames=""
      disabled={false}
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="UUID_MOCK_KEY_1"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;

exports[`state.error is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="UUID_MOCK_KEY_3"
  data-tip="TOOLTIP"
>
  <form
    className=""
  >
    <RoundButton
      active={true}
      back={false}
      classNames=""
      disabled={false}
      flexContainer="100"
      handleDisabled={null}
      handleNext={[Function]}
      icon=""
      iconClass=""
      inverse={false}
      size="small"
      text="Upload"
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <ReactTooltip
      className="tooltip"
      effect="solid"
      id="UUID_MOCK_KEY_3"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
    <input
      name="TYPE"
      onChange={[Function]}
      type="file"
    />
  </form>
</div>
`;
